[package]
name = "tokio-resol-vbus"
version = "0.1.0"
authors = ["Daniel Wippermann <Daniel.Wippermann@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/danielwippermann/tokio-resol-vbus.rs"
documentation = "https://docs.rs/tokio-resol-vbus"
description = "A Rust library for processing RESOL VBus data asynchronusly."
edition = "2018"

[dependencies]
futures = "0.1"
resol-vbus = "0.2"
tokio = "0.1"

[dev-dependencies]
tokio-serial = "3.1.0"
